--- a/servicepage.html
+++ b/servicepage.html
@@ -83,6 +83,16 @@
                               <button type="submit"><i class="fa fa-search"></i></button>
                             </form>
 
+                             <div class="dropdown filter2">
+                              <button class="btn  dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Sort
+                              </button>
+                              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="#">Sort by Distances</a>
+                                <a class="dropdown-item" href="#">Sort by Rating</a>
+                              </div>
+                            </div>
+
                             <div class="dropdown filter">
                               <button class="btn  dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Filter
