--- a/final.html
+++ b/final.html
@@ -26,6 +26,7 @@
         <h1>Thank You for Using "Raahi"</h1>
         <h2>The Scope of the Application Ends Here</h2>
         <h4>Till then, Pass Your Time by on the Amusement Tab</h4>
+        <a href="amusement.php">AMUSEMENTS</a>
     </div>
 </body>
 </html>
