--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
             <div class="navbar-nav ml-auto">
                 <a href="amusement.php" class="nav-item nav-link active">Amusement</a>
-                <a href="#" class="nav-item nav-link">Services</a>
-                <a href="#" class="nav-item nav-link">About Us</a>
-                <a href="#" class="nav-item nav-link">Login</a>
-                <a href="#" class="nav-item nav-link">Signup</a>
+                <a href="servicepage.php" class="nav-item nav-link">Services</a>
+                <a href="about.html" class="nav-item nav-link">About Us</a>
+                <a href="login.php" class="nav-item nav-link">Login</a>
+                <a href="signup.php" class="nav-item nav-link">Signup</a>
             </div>
 
         </div>
